<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_white_two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_mascota"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageMascota"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_used"
            android:scaleType="centerCrop"
            android:background="@drawable/border_rounded"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeleccionarImagen"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_imagen"
            android:layout_marginBottom="24dp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilImagenUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/o_ingresa_url_de_la_imagen"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etImagenUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="@color/cyan"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/cyan"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci_n"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="@color/cyan"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_mascota_list"
            android:textColor="@color/cyan"
            android:textSize="12sp"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:backgroundTint="@color/cyan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/cyan"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/neon_orange" />

    </LinearLayout>
</ScrollView>
